testsuite/tests/interpreter_errors/ambiguous_import/test.out
script.lkql:1:1: error: Ambiguous importation, multiple "foo" modules found (<working-dir>/foo.lkql & <working-dir>/others/foo.lkql)
  1 | import foo
    | ^^^^^^^^^^
